more fixes  - spacing in downloads  - show more looking better

--- a/src/main/webapp/css/tdar-bootstrap.css
+++ b/src/main/webapp/css/tdar-bootstrap.css
@@ -1373,3 +1373,8 @@ img.responsive-image {
     max-width: 100%;
     height: auto;    
 }
+
+#downloadsMoreArea {
+	background-color: #ddd;
+	padding-left: 35px;
+}
